--- a/estilo.css
+++ b/estilo.css
@@ -72,6 +72,42 @@ h1 {
     margin-top: 20vh;
 }
 
+
+
+/* IMAGENS DAS MEIAS */
+.imagem, .imagemKit{
+    display: flex;
+    justify-content: center;
+    /* Centraliza horizontalmente */
+    align-items: center;
+    /* Centraliza verticalmente */
+    height: 250px;
+    /* Ajuste a altura conforme necessário */
+}
+
+.imagemKit img {
+    width: 390px;
+    height: 200px;
+    max-width: 100%;
+    /* Garante que a imagem não ultrapasse os limites da div */
+}
+
+
+.imagem img {
+    max-width: 100%;
+    /* Garante que a imagem não ultrapasse os limites da div */
+    width: 244px;
+    height: 200px;
+}
+
+
+
+.informacao-produto{
+    margin-left: 3vh;
+}
+
+
+/* TODAS AS MEIAS */
 .conjuntoDeMeia {
     margin-top: 10vh;
     display: flex;
@@ -79,61 +115,58 @@ h1 {
     justify-content: space-around;
 }
 
-.meiaPretaCanoCurto,
-.meiaCinzaCanoCurto,
-.conjuntoMeiasPBC {
-    width: 45%;
-    /* Ajuste a largura para garantir que duas fiquem lado a lado */
-    margin-bottom: 20px;
-    /* Espaçamento entre as divs */
-}
 
 
+
+/* DIV DE CADA MEIA PARA FAZER A BORDA */
 #meiaLisaCanoCurto {
     border-radius: 10vh;
-    width: 513px;
-    height: 450px;
+    width: 410px;
+    height: 480px;
     border: 1px solid #474646;
     align-items: center;
 }
 
 .cores {
     display: flex;
+    margin-left: 2vh;
 }
 
 .branco,
 .preto,
 .cinza {
-    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.349);
+
     border-radius: 50%;
     width: 4vh;
     height: 4vh;
     margin: 0.75vh;
-    border: 1px solid black;
+
     background-color: #ffffff;
 }
-.preto{
+
+.preto {
     background-color: black;
 }
-.cinza{
+
+.cinza {
     background-color: #A5A5A5;
 }
 
+.branco {
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.215);
+}
 
-/* CSS para centralizar a imagem dentro da div */
-.imagem {
+
+
+.informacoes-preco {
     display: flex;
-    justify-content: center; /* Centraliza horizontalmente */
-    align-items: center; /* Centraliza verticalmente */
-    height: 250px; /* Ajuste a altura conforme necessário */
+    align-items: center;
+    text-align: center;
 }
 
-.imagem img {
-    max-width: 100%; /* Garante que a imagem não ultrapasse os limites da div */
-     width: 344px;
-    height: 250px;
-}
 
+
+/* DESCRIÇÃO PARA MUDAR FONTE */
 
 .descricao {
     font-family: "WorkSans";
@@ -146,8 +179,28 @@ h1 {
 
 .preco {
     font-family: "WorkSans";
+    font-size: 3.75vh;
 }
 
-.informacao-produto{
-    margin-left: 3vh;
+.informacoes-preco {
+    display: flex;
+    flex-direction: column;
+    /* Organiza o conteúdo da div em coluna */
+    justify-content: center;
+    /* Centraliza verticalmente */
+    align-items: center;
+    /* Centraliza horizontalmente */
+    text-align: center;
+    /* Centraliza o texto dentro da div */
+}
+
+
+
+.btn-euQuero{
+    background-color: #252160;
+    margin-top: 3vh;
+    color: #fff;
+    width: 265px;
+    height: 44px;
+    border-radius: 20px;
 }
