--- a/estilo.css
+++ b/estilo.css
@@ -118,7 +118,7 @@ a {
 }
 .branca{
 background-color: #ffffff;
-box-shadow: 5px 2px 22px 5px #00000044;}
+border: 1px solid #76767688;}
 
 .preta{
     background-color: #000000;
