--- a/estilo.css
+++ b/estilo.css
@@ -97,7 +97,7 @@ a {
 .cores-branca-preto-cinza,
 .cores-rosa-verde,
 .cores-verdeEscuro-verdeClaro-cinza,
-.cores-azulEscuro-pretaRosa {
+.cores-roxo-pretaRosa {
     display: flex;
     gap: 1vh;
     margin-top: 0.75vh;
@@ -110,22 +110,23 @@ a {
 .verdeClaro,
 .verdeMusgo,
 .roxo,
+.CinzaBranca,
 .pretaRosa,
-.rosa {
+.rosa, .pretaKit, .brancaKit, .cinzaKit {
     width: 5vh;
     height: 5vh;
     border-radius: 50%;
 }
-.branca{
+.branca, .brancaKit{
 background-color: #ffffff;
 border: 1px solid #76767688;}
 
-.preta{
+.preta, .pretaKit{
     background-color: #000000;
 
 }
 
-.cinza{
+.cinza, .cinzaKit, .CinzaBranca{
 background-color: #A5A5A5;
 }
 
@@ -205,7 +206,9 @@ background-color: #7BC194;
 }
 
 .preco-informacoes {
-    text-align: center;
+    text-align: center;   
+     margin-top: 2vh;
+
 }
 #preco-informacoes-meia-preta-cinza-branca{
     margin-top: 4vh;
@@ -217,7 +220,7 @@ background-color: #7BC194;
     width: 240px;
     height: 50px;
     border-radius: 20px;
-    margin-top: 5vh;
+    margin-top: 3vh;
     font-family: 'WorkSans';
     font-weight: 600;
     font-size: 3vh;
