--- a/style.css
+++ b/style.css
@@ -130,12 +130,188 @@ span {
 }
 
 .container {
-  margin: 150px 130px;
+  margin: 130px 130px;
 }
 
 .tituloCabecalho {
-  margin: 50px 0;
+  margin: 30px 0;
 }
+
+/* MAIS VENDIDAS */
+/* .maisVendidos {
+
+} */
+
+
+.todas-as-meias-feminina-cano-curto {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+
+}
+
+#div-meia-cano-curto {
+  align-items: center;
+  width: 390px;
+  height: 450px;
+  margin-top: 2vh;
+  border: 1px solid #A5A5A5;
+  border-radius: 20px;
+
+}
+
+/* CORES */
+.cores-branca-preto-cinza,
+.cores-rosa-verde,
+.cores-verdeEscuro-verdeClaro-cinza,
+.cores-roxo-pretaRosa {
+  display: flex;
+  gap: 1vh;
+  margin-top: 0.75vh;
+}
+
+.branca,
+.preta,
+.cinza,
+.verde-agua,
+.verdeClaro,
+.verdeMusgo,
+.roxo,
+.CinzaBranca,
+.pretaRosa,
+.rosa,
+.pretaKit,
+.brancaKit,
+.cinzaKit {
+  width: 5vh;
+  height: 5vh;
+  border-radius: 50%;
+}
+
+.branca,
+.brancaKit {
+  background-color: #ffffff;
+  border: 1px solid #76767688;
+}
+
+.preta,
+.pretaKit {
+  background-color: #000000;
+
+}
+
+.cinza,
+.cinzaKit,
+.CinzaBranca {
+  background-color: #A5A5A5;
+}
+
+.verde-agua {
+  background-color: #00BDB5;
+}
+
+.rosa {
+  background-color: #DA6A9E;
+}
+
+.verdeMusgo {
+  background-color: #7BC194;
+}
+
+.verdeClaro {
+  background-color: #54C999;
+
+}
+
+.pretaRosa {
+  background: linear-gradient(to right, #000000 50%, #DA598F 50%);
+}
+
+.roxo {
+  background-color: #5034A9;
+}
+
+/* arrumando as imagens das meias cano curto */
+
+.Quadrado-da-meia-preta-cano-curto img,
+/* imagem da primeira meia, preta cano curto */
+.Quadrado-da-meia-verde-cano-curto img,
+/* imagem da meia, verde cano curto */
+.Quadrado-da-meia-BrancaRosa-cano-curto img,
+/* imagem da meia, rosa cano curto */
+.Quadrado-da-meia-pretaRosa-cano-curto img {
+  /* imagem dameia, preta com rosa cano curto */
+  width: 250px;
+  height: 200px;
+}
+
+.containerMeia {
+  display: flex;
+  justify-content: center;
+}
+
+.Quadrado-do-kit-cinza-cano-curto img,
+.Quadrado-do-kit-preta-cinza-branco-cano-curto img {
+  width: 370px;
+  height: 200px;
+}
+
+/* estilizando as informações */
+.informacoes-meia-cano-curto-feminino {
+  margin-left: 2vh;
+  margin-top: 2vh;
+}
+
+.CanoCurtoSubtitulo {
+  font-family: 'WorkSans';
+  font-weight: 600;
+}
+
+.numeracao {
+  font-family: 'WorkSans';
+  font-weight: 300;
+}
+
+.preco {
+  font-family: 'WorkSans';
+  font-size: 4vh;
+  font-weight: 800;
+}
+
+.texto-a-vista {
+  font-family: 'WorkSans';
+  font-weight: 300;
+}
+
+.preco-informacoes {
+  text-align: center;
+  margin-top: 2vh;
+
+}
+
+#preco-informacoes-meia-preta-cinza-branca {
+  margin-top: 4vh;
+}
+
+.botao-euQuero {
+  background-color: #252160;
+  color: #fff;
+  width: 240px;
+  height: 50px;
+  border-radius: 20px;
+  margin-top: 3vh;
+  font-family: 'WorkSans';
+  font-weight: 600;
+  font-size: 3vh;
+}
+
+#botao-da-meia-preta-branca-cinza {
+  margin-top: 6.75vh;
+  font-family: 'WorkSans';
+  font-weight: 600;
+}
+
+/*  */
 
 .cadaCategoria {
   display: flex;
@@ -149,7 +325,7 @@ span {
 .imgCategoria img {
   background-color: #F4B17A;
   border-radius: 50%;
-  width: 200px;
+  width: 120px;
   margin-bottom: 5px;
 }
 
@@ -158,7 +334,7 @@ span {
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 60vh;
+  height: 55vh;
 }
 
 .esporte {
