--- a/descricaoFeminina/lele.css
+++ b/descricaoFeminina/lele.css
@@ -1,4 +1,3 @@
-/* RESET */
 * {
     box-sizing: border-box;
     border: 0;
@@ -14,18 +13,21 @@ a {
 
 @font-face {
     font-family: 'LibreFranklin';
-    src: url(fonts/LibreFranklin-VariableFont_wght.ttf);
+    src: url(../fonts/LibreFranklin-VariableFont_wght.ttf);
 }
 
 @font-face {
     font-family: 'WorkSans';
-    src: url(fonts/WorkSans-VariableFont_wght.ttf);
+    src: url(../fonts/WorkSans-VariableFont_wght.ttf);
 }
 
-/* CABEÇALHO */
+
 
 #header {
     background-color: #252160;
+    position: fixed;
+    width: 100%;
+    z-index: 10;
 }
 
 .cabecalhoUm {
@@ -67,14 +69,178 @@ a {
 
 
 
-/* COMEÇO DAS MEIAS CANO CURTO */
+/* COMEÇO DE DESCRIÇÃO */
+#imagemMeia {
+    margin-top: 20vh;
+    border: 1px solid #A5A5A5;
+    width: 50vh;
+    margin-left: 5vh;
+    height: 50vh;
+    border-radius: 30px;
+}
+
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    /* Para permitir que os itens quebrem linha em telas menores */
+}
+
+.TodasInformacoes {
+    margin-left: 20vh;
+    margin-top: 25vh;
+    max-width: 50%;
+}
+
+
+.linhaDescricaoDoProduto {
+    max-width: 100%;
+    width: 120vh;
+    height: 0.4px;
+    margin-top: 3vh;
+    background-color: #A5A5A5;
+}
+
+/* EDITANDO AS FONTES DE INFORMACOES */
 .titulo {
-    font-family: "LibreFranklin";
+    font-family: 'WorkSans';
+    font-size: 5vh;
+    font-weight: 600;
+}
+
+.preco {
+    font-family: 'WorkSans';
+    font-size: 17vh;
+    font-weight: 600;
+    margin-top:10vh;
+}
+
+.numeracao {
+    font-family: 'WorkSans';
+    font-weight: 300;
+
+    margin-top: 0.75vh;
+}
+
+.codigo {
+    font-family: 'WorkSans';
+    font-weight: 300;
+    margin-top: 0.75vh;
+}
+
+.informacoesPrecoTamanho button {
+    width: 229px;
+    height: 55px;
+    background-color: #252160;
+    border-radius: 20px;
+    color: #fff;
+    margin-top: 4vh;
+    font-family: 'WorkSans';
+    font-size: 2.75vh;
+    font-weight: 300;
     margin-top: 10vh;
+}
+
+.btn-whatsapp {
+    margin-left: 3vh;
+}
+
+/* DESCRIÇÃO DO PRODUTO */
+
+.titulo-DescricaoProduto {
+    font-family: 'WorkSans';
+    font-weight: 600;
+    margin-top: 15vh;
+    margin-left: 6vh;
+}
+
+.linhaUm-Descricao-do-produto {
+    background-color: #000000;
+    height: 1vh;
+    width: 20vh;
+    margin-left: 6vh;
+    margin-top: 1vh;
+}
+
+.linhaDois-Descricao-do-produto {
+    background-color: #000000;
+    height: 0.05vh;
+    width: 100%;
+}
+
+.texto-Descricao {
+    font-family: 'WorkSans';
+    font-weight: 400;
+    margin-top: 7vh;
     margin-left: 5vh;
 }
 
-/* FAZENDO ELA FICAR EM HORIZONTAL COM ESPAÇO */
+.elementosDoTexto-Descricao {
+    margin-top: 3vh;
+}
+
+.titulo-CompreJunto  {
+    text-align: center;
+    font-family: 'LibreFranklin';
+    font-weight: 500;
+    margin-top: 17vh;
+}
+
+.linhaTres-CompreJunto {
+    background-color: #252160;
+    height: 0.55vh;
+    margin-top: 3vh;
+    width: 30vh;
+    margin: 0 auto; /* Centraliza horizontalmente */
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .todas-as-meias-feminina-cano-curto {
     display: flex;
@@ -112,44 +278,58 @@ a {
 .roxo,
 .CinzaBranca,
 .pretaRosa,
-.rosa, .pretaKit, .brancaKit, .cinzaKit {
+.rosa,
+.pretaKit,
+.brancaKit,
+.cinzaKit {
     width: 5vh;
     height: 5vh;
     border-radius: 50%;
 }
-.branca, .brancaKit{
-background-color: #ffffff;
-border: 1px solid #76767688;}
 
-.preta, .pretaKit{
+.branca,
+.brancaKit {
+    background-color: #ffffff;
+    border: 1px solid #76767688;
+}
+
+.preta,
+.pretaKit {
     background-color: #000000;
 
 }
 
-.cinza, .cinzaKit, .CinzaBranca{
-background-color: #A5A5A5;
+.cinza,
+.cinzaKit,
+.CinzaBranca {
+    background-color: #A5A5A5;
 }
 
-.verdeAgua{
-background-color: #00BDB5;
+.verdeAgua {
+    background-color: #00BDB5;
 }
-.rosa{
+
+.rosa {
     background-color: #DA6A9E;
 }
-.verdeMusgo{
-background-color: #7BC194;
+
+.verdeMusgo {
+    background-color: #7BC194;
 }
-.verdeClaro{
+
+.verdeClaro {
     background-color: #54C999;
 
 }
 
-.pretaRosa{
+.pretaRosa {
     background: linear-gradient(to right, #000000 50%, #DA598F 50%);
 }
-.roxo{
+
+.roxo {
     background-color: #5034A9;
 }
+
 /* arrumando as imagens das meias cano curto */
 
 .Quadrado-da-meia-preta-cano-curto img,
@@ -180,10 +360,11 @@ background-color: #7BC194;
 
 
 /* estilizando as informações */
-.informacoes-meia-cano-curto-feminino{
+.informacoes-meia-cano-curto-feminino {
     margin-left: 2vh;
     margin-top: 2vh;
 }
+
 .CanoCurtoSubtitulo {
     font-family: 'WorkSans';
     font-weight: 600;
@@ -206,11 +387,12 @@ background-color: #7BC194;
 }
 
 .preco-informacoes {
-    text-align: center;   
-     margin-top: 2vh;
+    text-align: center;
+    margin-top: 2vh;
 
 }
-#preco-informacoes-meia-preta-cinza-branca{
+
+#preco-informacoes-meia-preta-cinza-branca {
     margin-top: 4vh;
 }
 
@@ -225,12 +407,11 @@ background-color: #7BC194;
     font-weight: 600;
     font-size: 3vh;
 }
-#botao-da-meia-preta-branca-cinza{
+
+#botao-da-meia-preta-branca-cinza {
     margin-top: 6.75vh;
     font-family: 'WorkSans';
     font-weight: 600;
 }
 
-
-/* ---------------------------DESCRIÇÃO MEIA ----------------------------------------------------------- */
 
