--- a/descricaoFeminina/style-feminino.css
+++ b/descricaoFeminina/style-feminino.css
@@ -23,53 +23,57 @@ a {
 
 
 
+
 #header {
     background-color: #252160;
     position: fixed;
     width: 100%;
     z-index: 10;
-}
-
-.cabecalhoUm {
+  }
+  
+  .cabecalhoUm {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin: 0 80px;
     padding: 5px;
-}
-
-.procurando {
+  }
+  
+  .procurando {
     padding: 13px;
     border-radius: 30px;
     width: 400px;
     height: 35px;
     font: 600 16px 'WorkSans', sans-serif;
-
-}
-
-.imagemLogo img {
+  
+  }
+  
+  .imagemLogo img {
     width: 150px;
-}
-
-.linha {
+  }
+  
+  .linha {
     background-color: #fff;
     height: 0.4px;
-}
-
-.cabecalho2 {
+  }
+  
+  .cabecalho2 {
     text-align: center;
     padding: 15px 0 10px 0;
-}
-
-.item {
+  }
+  
+  .item {
     color: #fff;
     margin: 20px;
     font: 600 16px 'WorkSans', sans-serif;
-}
+  }
+  
+  /* FIM DO CABEÇALHO */
 
 
 
 /* COMEÇO DE DESCRIÇÃO */
+
 #imagemMeia {
     margin-top: 20vh;
     border: 1px solid #A5A5A5;
@@ -123,7 +127,7 @@ a {
     margin-top: 0.75vh;
 }
 
-.codigo {
+#codigo {
     font-family: 'WorkSans';
     font-weight: 300;
     margin-top: 0.75vh;
