--- a/estilo.css
+++ b/estilo.css
@@ -26,53 +26,60 @@ a {
 
 #header {
     background-color: #252160;
-}
-
-.cabecalhoUm {
+    position: fixed;
+    width: 100%;
+    z-index: 10;
+  }
+  
+  .cabecalhoUm {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin: 0 80px;
     padding: 5px;
-}
-
-.procurando {
+  }
+  
+  .procurando {
     padding: 13px;
     border-radius: 30px;
     width: 400px;
     height: 35px;
     font: 600 16px 'WorkSans', sans-serif;
-
-}
-
-.imagemLogo img {
+  
+  }
+  
+  .imagemLogo img {
     width: 150px;
-}
-
-.linha {
+  }
+  
+  .linha {
     background-color: #fff;
     height: 0.4px;
-}
-
-.cabecalho2 {
+  }
+  
+  .cabecalho2 {
     text-align: center;
     padding: 15px 0 10px 0;
-}
-
-.item {
+  }
+  
+  .item {
     color: #fff;
     margin: 20px;
     font: 600 16px 'WorkSans', sans-serif;
-}
+  }
+  
+  /* FIM DO CABEÇALHO */
 
 
 
 /* COMEÇO DAS MEIAS CANO CURTO */
 .titulo {
     font-family: "LibreFranklin";
-    margin-top: 10vh;
+    
     margin-left: 5vh;
 }
+#meiasCanoCurto{
+padding-top: 20vh;}
 
 /* FAZENDO ELA FICAR EM HORIZONTAL COM ESPAÇO */
 
@@ -232,5 +239,253 @@ background-color: #7BC194;
 }
 
 
-/* ---------------------------DESCRIÇÃO MEIA ----------------------------------------------------------- */
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* TESTEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE */
+
+
+
+/* ---------------------------RODAPE ----------------------------------------------------------- */
+
+/* RESET */
+* {
+    box-sizing: border-box;
+    border: 0;
+    padding: 0;
+    margin: 0;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+/* FONTES */
+
+@font-face {
+    font-family: 'LibreFranklin';
+    src: url(fonts/LibreFranklin-VariableFont_wght.ttf);
+}
+
+@font-face {
+    font-family: 'WorkSans';
+    src: url(fonts/WorkSans-VariableFont_wght.ttf);
+}
+
+/* RODAPÉ */
+
+#footer {
+    background-color: #252160;
+    color: white;
+    margin-top: 120px;
+    transition: background-color 0.5s ease;
+}
+
+#footer:hover {
+    background-color: #1e1b55;
+}
+
+.container-rodape {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 65px 100px 25px 100px;
+    transition: padding 0.5s ease;
+}
+
+.imgLogo-rodape {
+    width: 200px;
+}
+
+.linha1-rodape {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.contatos-rodape, .acompanhe-rodape {
+    margin-top: 20px;
+    transition: margin-top 0.5s ease;
+}
+
+.whats-rodape, .email-rodape {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.whats-rodape a, .email-rodape a {
+    display: inline-flex;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
+
+.imgContatos-rodape {
+    width: 30px;
+    margin-right: 10px;
+    transition: transform 0.3s ease;
+}
+
+.imgContatos-rodape:hover {
+    transform: translateY(-5px);
+}
+
+.titulo-rodape {
+    font: 650 20px 'LibreFranklin', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    transition: color 0.3s ease;
+}
+
+.titulo-rodape:hover {
+    color: #b4b4b4;
+}
+
+.texto-rodape {
+    font: 400 18px 'WorkSans', sans-serif;
+}
+
+.texto2-rodape {
+    font: 400 18px 'WorkSans', sans-serif;
+    margin-top: 12px;
+    transition: transform 0.3s ease, color 0.3s ease;
+}
+
+.texto2-rodape:hover {
+    color: #b4b4b4;
+    transform: scale(0.97);
+}
+
+.imgRedes-rodape {
+    width: 30px;
+    margin: 0 6px;
+    transition: transform 0.3s ease;
+}
+
+.imgRedes-rodape:hover {
+    transform: translateY(-5px);
+}
+
+.redes-rodape {
+    text-align: center;
+    margin-top: 10px;
+}
+
+.linha2-rodape {
+    margin-top: 60px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.categGeral-rodape {
+    display: flex;
+}
+
+.subCategoria1-rodape {
+    margin-right: 90px;
+}
+
+.textoInst-rodape {
+    margin-top: 20px;
+}
+
+.categGeral-rodape {
+    margin-top: 10px;
+}
+
+.categorias-rodape {
+    margin-left: 213px;
+}
+
+.final-rodape {
+    margin-top: 110px;
+    text-align: center;
+}
+
+.textoFinal-rodape {
+    font: 400 15px 'WorkSans', sans-serif;
+}
+
+/* VERSÃO MOBILE */
+
+@media screen and (max-width: 500px) {
+    .container-rodape {
+        padding: 50px 50px;
+    }
+
+    .linha1-rodape, .linha2-rodape {
+        display: block;
+        text-align: center;
+    }
+
+    .contatos-rodape {
+        margin-top: 40px;
+    }
+
+    .titulo-rodape {
+        text-align: center;
+        font-size: 18px;
+    }
+
+    .acompanhe-rodape, .institucional-rodape, .categorias-rodape {
+        margin-top: 60px;
+    }
+
+    .categorias-rodape {
+        margin-left: 0;
+        text-align: center;
+    }
+
+    .final-rodape {
+        margin-top: 60px;
+    }
+
+    .imgLogo-rodape {
+        width: 150px;
+    }
+
+    .imgRedes-rodape {
+        margin: 10px;
+    }
+
+    .subCategoria1-rodape {
+        margin-right: 50px;
+    }
+
+    .categGeral-rodape{
+        justify-content: center;
+        align-items: center;
+    }
+
+    .whats-rodape, .email-rodape {
+        justify-content: center; /* Centraliza o conteúdo */
+    }
+}
