--- a/descricaoFeminina/style-feminino.css
+++ b/descricaoFeminina/style-feminino.css
@@ -77,9 +77,7 @@ a {
 #imagemMeia {
     margin-top: 20vh;
     border: 1px solid #A5A5A5;
-    width: 50vh;
     margin-left: 5vh;
-    height: 50vh;
     border-radius: 30px;
 }
 
@@ -164,7 +162,7 @@ a {
 .linhaUm-Descricao-do-produto {
     background-color: #000000;
     height: 1vh;
-    width: 20vh;
+    width: 5vh;
     margin-left: 6vh;
     margin-top: 1vh;
 }
@@ -215,7 +213,7 @@ a {
 
 #divMeiasBaby {
     align-items: center;
-    width: 320px;
+    width: 340px;
     height: 420px;
     margin-top: 10vh;
     border: 1px solid #A5A5A5;
@@ -231,6 +229,7 @@ a {
     gap: 1vh;
     margin-top: 2vh;
 }
+
 
 .RosaClaro,
 .Lilas,
@@ -287,6 +286,16 @@ a {
 }
 
 
+
+
+.imagem-preta{
+    width: 50vh;
+    height: 50vh;
+}
+.ImagemPreta-Kit3{
+    width: 84vh;
+    height: 52vh;
+}
 
 /* arrumando as imagens das meias cano curto */
 
