--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ span {
 }
 
 .container {
-  margin: 130px 130px;
+  margin: 130px;
 }
 
 .tituloCabecalho {
@@ -154,7 +154,6 @@ span {
 #div-meia-cano-curto {
   align-items: center;
   width: 390px;
-  height: 450px;
   margin-top: 2vh;
   border: 1px solid #A5A5A5;
   border-radius: 20px;
@@ -304,6 +303,7 @@ span {
   font-family: 'WorkSans';
   font-weight: 600;
   font-size: 3vh;
+  margin-bottom: 20px;
 }
 
 #botao-da-meia-preta-branca-cinza {
@@ -408,15 +408,90 @@ span {
   width: 90px;
 }
 
-/* REVENDEDOR */
+/* TUDO SOBRE MEIAS SENE */
 
-#revendedor .container{
+#sobreMeias {
+  background-color: #0F0D27;
+  padding: 10px 0px;
+  color: #fff;
+}
+
+.tudoSobreMeia p {
+  font: 400 20px 'WorkSans', sans-serif;
+}
+
+.tudoSobreMeia .tituloCabecalho {
+  text-align: center;
+}
+
+.textoSobreMeia {
+  text-align: justify;
+}
+
+.tudoSobreMeia {
+  width: 60%;
+  margin-left: 20%;
+}
+
+/* OBJETIVOS */
+#Objetivos .tituloCabecalho {
   margin: 0;
+}
+
+.tudoObjet {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.cadaObjet {
+  display: flex;
+  align-items: center;
+  margin: 30px 0;
+}
+
+.imgObjet img {
+  height: 70px;
+}
+
+.imgObjet {
+  border: 1px solid #000;
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.textoObjet {
+  width: 800px;
+  text-align: justify;
+  margin: 0 20px;
+}
+
+.obj02 .imgObjet {
+  order: 1;
+}
+
+.textinhoObjet p {
+  font: 400 16px 'WorkSans', sans-serif;
+}
+
+.textoObjet h2 {
+  font: 700 20px 'LibreFranklin', sans-serif;
+}
+
+/* REVENDEDOR */
+#revendedor .container{
+  margin: 130px 0;
   background-color: #589EA8;
+  height: 70vh;
 }
 
 .tudoRevendedor {
   display: flex;
+  justify-content: space-between;
 }
 
 .textoRevendedor {
@@ -424,10 +499,20 @@ span {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  margin-right: 230px;
+}
+
+.textoRevendedor h2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #fff;
+  font: 200 35px 'LibreFranklin', sans-serif;
 }
 
 .caixasRevendedor {
   display: flex;
+  margin-top: 30px;
 }
 
 .caixinha {
@@ -435,6 +520,45 @@ span {
   display: flex;
   align-items: center;
   flex-direction: column;
-  width: 160px;
+  width: 140px;
   padding: 30px 0;
+  border-radius: 18px;
+  margin: 0 10px;
 }
+
+.caixinha img {
+  width: 55px;
+}
+
+.imgRevendedor img {
+  height: 70vh;
+}
+
+/* CARROSSEL DE MEIAS */
+
+.tudoTendencias .tituloCabecalho span {
+  border-bottom: #A75D44 solid 4px;
+  padding-right: 40px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
